--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
 </head>
 
 <body>
-    <canvas id="canvas1" width="560" height="560"></canvas>
+    <canvas id="canvas1"></canvas>
+    <div class="controls">
+        <label for="animations">Chose animations</label>
+        <select name="animations" id="animations">
+            <option value="idle">Idle</option>
+            <option value="jump">jump</option>
+            <option value="fall">fall</option>
+            <option value="run">run</option>
+            <option value="dizzy">dizzy</option>
+            <option value="sit">sit</option>
+            <option value="roll">roll</option>
+            <option value="bite">bite</option>
+            <option value="ko">ko</option>
+            <option value="getHit">getHit</option>
+
+        </select>
+    </div>
     <script src="script.js"></script>
 </body>
 
